--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html lang="">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
+        <title>Chiron Deloof - HTML5 Boilerplate</title>
+        <meta name="description" content="This is my HTML5 boilerplate">
+        <meta name="viewport" conten="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="favicon.svg">
     </head>
     <body>
         <header>
