--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
         <title>Chiron Deloof - HTML5 Boilerplate</title>
         <meta name="description" content="This is my HTML5 boilerplate">
         <meta name="viewport" conten="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#44c8f5">
+
         <link rel="icon" href="favicon.svg">
+        <link rel="aaple-touch-icon" href="apple-touch-icon.svg">
+        <link rel="manifest" href="manifest.json">
     </head>
     <body>
         <header>
