--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. This is a <a href="test.com">standard link</a> distinctio facilis excepturi, reprehenderit pariatur odit, velit mollitia saepe impedit reiciendis omnis quasi sed, facere quo nobis a blanditiis.
         </p>
+        <figure>
+            <img src="img/yawning-cat.jpeg" alt="This is a picture of a yawning cat">
+            <figcaption>Yawning cat. Photo by Martina Misar</figcaption>
+        </figure>
         <h3>
             Heading 3
         </h3>
@@ -40,6 +44,40 @@
         <p>
             Add an unorderd list with 3 list items here
         </p>
+        <h2>
+            <table>
+                <tr>
+                    <th>Country</th>
+                    <th>Capital</th>
+                    <th>Population</th>
+                    <th>Language</th>
+                </tr>
+                <tr>
+                    <td>USA</td>
+                    <td>Washington, D.C.</td>
+                    <td>309 million</td>
+                    <td>English</td>
+                </tr>
+                <tr>
+                    <td>Sweden</td>
+                    <td>Stockholm</td>
+                    <td>9 million</td>
+                    <td>Swedish</td>
+                </tr>
+                <tr>
+                    <td>France</td>
+                    <td>Paris</td>
+                    <td>10 million</td>
+                    <td>French</td>
+                </tr>
+                <tr>
+                    <td>Germany</td>
+                    <td>Berlin</td>
+                    <td>9 million</td>
+                    <td>German</td>
+                </tr>
+            </table>
+        </h2>
         <hr>
         <footer>
             <p>By <strong>Your name</strong></p>
