--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <link rel="icon" href="favicon.svg">
         <link rel="aaple-touch-icon" href="apple-touch-icon.svg">
         <link rel="manifest" href="manifest.json">
+
+        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/screen.css">
     </head>
     <body>
