--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
         <h3>
             Styling lists is easy
         </h3>
+        <ul>
+            <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem, soluta.</li>
+            <li>Id, suscipit officiis ea aliquid consequuntur aperiam a dolor eligendi!</li>
+            <li>Sequi vitae laudantium accusantium eius quam alias est quo officia.</li>
+        </ul>
         <p>
             Add an unorderd list with 3 list items here
         </p>
