--- a/index.html
+++ b/index.html
@@ -16,11 +16,19 @@
         <link rel="stylesheet" href="css/screen.css">
     </head>
     <body>
+        <nav>
+            <ul>
+                <li><a href="headgin2">Heading 2</a></li>
+                <li><a href="heading3">Heading 3</a></li>
+                <li><a href="lists">Lists</a></li>
+                <li><a href="table">Table</a></li>
+            </ul>
+        </nav>
         <header>
             <h1>Hello world! This is my HTML5 boilerplate.</h1>
             <p>A Boilerplate helps you build fast, robust, and adaptable web apps or sites. Kick-start your project with the combined knowledge and effort of 100s of developers, all in one little package.</p>
         </header>
-        <h2>
+        <h2 id="heading2">
             Heading 2
         </h2>
         <p>
@@ -30,7 +38,7 @@
             <img src="img/yawning-cat.jpeg" alt="This is a picture of a yawning cat">
             <figcaption>Yawning cat. Photo by Martina Misar</figcaption>
         </figure>
-        <h3>
+        <h3 id="heading3">
             Heading 3
         </h3>
         <p>
@@ -41,7 +49,7 @@
                 A blockquote is a large quotation. The content of a blockquote element must include block-level elements such as headings, lists, paragraphs or div’s. This element can also have an optional attribute cite that specifies the location (in the form of a URI) where the quote has come from.
             </p>
         </blockquote>
-        <h3>
+        <h3 id="lists">
             Styling lists is easy
         </h3>
         <ul>
@@ -52,7 +60,7 @@
         <p>
             Add an unorderd list with 3 list items here
         </p>
-        <h2>
+        <h2 id="table">
             <table>
                 <tr>
                     <th>Country</th>
@@ -60,7 +68,7 @@
                     <th>Population</th>
                     <th>Language</th>
                 </tr>
-                <tr>
+                <tr class="odd">
                     <td>USA</td>
                     <td>Washington, D.C.</td>
                     <td>309 million</td>
@@ -72,7 +80,7 @@
                     <td>9 million</td>
                     <td>Swedish</td>
                 </tr>
-                <tr>
+                <tr class="odd">
                     <td>France</td>
                     <td>Paris</td>
                     <td>10 million</td>
